# mcp-teams-server

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE.md  REUSE.toml  SECURITY.md  glama.json  llms-install.md  pyproject.toml  repolinter.json  sample.env
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-issue.md  feature-issue.md
.github/workflows/: PR-verify.yml  release.yml  scorecard-analysis.yml  sonar-cloud-analysis.yml
app/: manifest.json
doc/: MS-Teams-setup.md
src/mcp_teams_server/: __init__.py  __main__.py  config.py  teams.py
tests/: __init__.py  test_main.py  test_teams.py
