[project]
name = "mcp-teams-server"
version = "1.0.4"
description = "An MCP server implementation for Microsoft Teams integration"
readme = "README.md"
keywords = ["mcp", "llm", "automation", "Microsoft Teams"]
authors = [{ name = "Industria de Diseño Textil S.A." }]
maintainers = [
    { name = "Mariano Alonso Ortiz", email = "marianoao@inditex.com" },
]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.10.11",
    "asyncio>=3.4.3",
    "botbuilder-core>=4.17.0",
    "botbuilder-integration-aiohttp>=4.17.0",
    "dotenv>=0.9.9",
    "mcp[cli]>=1.9.1",
    "msgraph-sdk>=1.31.0",
    "multidict>=6.4.4",
]

[project.urls]
Repository = "https://github.com/InditexTech/mcp-teams-server"
Issues = "https://github.com/InditexTech/mcp-teams-server/issues"

[project.scripts]
mcp-teams-server = "mcp_teams_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mock>=5.2.0",
    "pyproject-parser[cli]>=0.13.0",
    "pyright>=1.1.398",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "reuse>=5.0.2",
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/mcp_teams_server/teams.py" = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --import-mode=importlib --strict-markers -m \"not integration\""
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "integration: integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning"
]
